[package]
name = "eframe_test"
version = "0.1.0"
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = "0.10"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
egui = "0.20.0"
eframe = "0.20.0"
hmac = "0.12"
generic-array = "0.14"
getrandom = { version = "0.2", features = ["js"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2" }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
